# agent-governance-system

./: .criticignore  .editorconfig  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  AGS_3.0_ROADMAP.md  AGS_MASTER_TODO.md  AGS_ROADMAP_MASTER.md  AGS_ROADMAP_V4.md  CHANGELOG.md  ERROR_RECEIPT.json  HANDOFF.md  LICENSE  README.md  RELEASE_MANIFEST.json  RELEASE_MANIFEST.json.sig  REPO_FIXES_TASKS.md  ROADMAP.md  ROADMAP_V2.2.md  ROADMAP_V2.3.md  SQUAD_REPORT.json  SWARM_REPORT.json  TEST_FAILURES_REPORT.md  analyze_cat_chat_db.py  analyze_cat_chat_duplicates.py  collection_errors.txt  collection_errors_v2.txt  collection_errors_v3.txt  collection_errors_v4.txt  collection_v5.txt  collection_v6.txt  collection_v7.txt  collection_v8.txt  commit-plan-phase-6-2-attestation.md  critic_full.txt  debug_mcp.py  debug_path.py  debug_revocation.py  (+51 more)
.githooks/: post-checkout  post-merge  (+3 more)
CAPABILITY/SKILLS/utilities/doc-merge-batch-skill/: .gitignore  README.md  SKILL.md  pyproject.toml  run.py  validate.py
CAPABILITY/SKILLS/utilities/doc-merge-batch-skill/doc_merge_batch/: __init__.py  __main__.py  blocks.py  cli.py  core.py  diffing.py  planner.py  utils.py
CAPABILITY/SKILLS/utilities/doc-merge-batch-skill/fixtures/basic/: a.md  b.md  expected.json  input.json
CAPABILITY/SKILLS/utilities/doc-merge-batch-skill/schemas/: doc_merge_batch.input.schema.json  doc_merge_batch.output.schema.json
CAPABILITY/SKILLS/utilities/doc-merge-batch-skill/tests/: test_doc_merge_batch.py
THOUGHT/LAB/EIGEN_BUDDY/core/rust_ffi/: .gitignore  Cargo.toml  test_sweep.py
(+10371 files in other folders)
