[package]
name = "catalytic_ffi"
version = "0.1.0"
edition = "2021"

[lib]
name = "catalytic_ffi"
crate-type = ["cdylib"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
numpy = "0.22"
rayon = "1.10"
rand = "0.8"
sha2 = "0.10"
