[package]
name = "rust_core"
version = "0.1.0"
edition = "2024"

[dependencies]
num-bigint = "0.4.6" # Pure Rust arbitrary precision (MSVC compatible)
libc = "0.2"   # Raw OS syscalls (mprotect, VirtualProtect)
rayon = "1.10.0" # Multi-threading SIMD operations
nalgebra = "0.33.0" # Matrix determinant integration
winapi = { version = "0.3.9", features = ["memoryapi", "winnt", "basetsd"] }
